--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@react-native-community/masked-view": "^0.1.7",
     "@react-navigation/native": "^5.1.4",
     "@react-navigation/stack": "^5.2.9",
+    "art": "^0.10.3",
+    "d3": "^5.15.1",
+    "d3-shape": "^1.3.7",
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-gesture-handler": "^1.6.1",
